--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -14,6 +14,7 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "three": "^0.147.0"
   }
 }
